# swe-bench-m-delta-testing

./: .gitignore  main.py  pyproject.toml
aws/: README.md  aws-resources.yaml  run_ec2.sh  sbmdt-worker-ami.pkr.hcl  sync-s3-with-local.sh  useful_aliases.sh
notebooks/: .gitignore  agent_comparison.ipynb  evaluate.ipynb  evaluate_models.py  f2p_p2p_analysis.ipynb  perf.ipynb  test_split.py
parallel/: .gitignore  docker_cleanup.sh  log.txt  run_in_parallel.sh  tasks.txt  tmux-init.sh
results/: GoogleChrome__lighthouse-1446-before_patch-BASE.json  GoogleChrome__lighthouse-1549-before_patch-BASE.json  PrismJS__prism-1500-before_patch-BASE.json  alibaba-fusion__next-717-before_patch-BASE.json  alibaba-fusion__next-717-without_image-llm.claude4.json  bpmn-io__bpmn-js-1011-before_patch-BASE.json  carbon-design-system__carbon-10188-before_patch-BASE.json  eslint__eslint-8120-before_patch-BASE.json  eslint__eslint-8120-gold-GOLD.json  eslint__eslint-8850-before_patch-BASE.json  eslint__eslint-8850-gold-GOLD.json  eslint__eslint-9348-before_patch-BASE.json  eslint__eslint-9348-gold-GOLD.json  eslint__eslint-9436-before_patch-BASE.json  eslint__eslint-9436-gold-GOLD.json  eslint__eslint-9436-without_image-llm.claude4.json  grommet__grommet-2061-before_patch-BASE.json  grommet__grommet-6227-before_patch-BASE.json  grommet__grommet-6722-before_patch-BASE.json  grommet__grommet-7025-before_patch-BASE.json  highlightjs__highlight.js-2684-before_patch-BASE.json  highlightjs__highlight.js-2684-gold-GOLD.json  highlightjs__highlight.js-2703-before_patch-BASE.json  highlightjs__highlight.js-2703-gold-GOLD.json  highlightjs__highlight.js-2704-before_patch-BASE.json  highlightjs__highlight.js-2704-gold-GOLD.json  highlightjs__highlight.js-2726-before_patch-BASE.json  highlightjs__highlight.js-2726-gold-GOLD.json  highlightjs__highlight.js-2727-before_patch-BASE.json  highlightjs__highlight.js-2727-gold-GOLD.json  highlightjs__highlight.js-2740-before_patch-BASE.json  highlightjs__highlight.js-2740-gold-GOLD.json  highlightjs__highlight.js-2750-before_patch-BASE.json  highlightjs__highlight.js-2750-gold-GOLD.json  highlightjs__highlight.js-2765-before_patch-BASE.json  highlightjs__highlight.js-2765-gold-GOLD.json  highlightjs__highlight.js-2785-before_patch-BASE.json  highlightjs__highlight.js-2785-gold-GOLD.json  highlightjs__highlight.js-2811-before_patch-BASE.json  highlightjs__highlight.js-2811-gold-GOLD.json  (+72 more)
scripts/: clean.py  create_tasks.py  run_all_ec2.py  run_ec2.py  run_instance.py  test_results_json_to_parquet.py  (+1 more)
(+562 files in other folders)
