[project]
name = "swe-bench-m-delta-testing"
version = "0.1.0"
description = "Delta testing on SWE-Bench M instances with agent-generate patches"
authors = [
    { name = "Daniel Di Giovanni", email = "dannyjdigio@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.14.1",
    "aiolimiter>=1.2.1",
    "boto3[crt]>=1.43.36",
    "docker>=7.1.0",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
]


[dependency-groups]
dev = [
    "boto3-stubs[ec2,s3,ssm]>=1.43.36",
    "pre-commit",
    "pyarrow-stubs>=20.0.0.20260625",
    "pyright>=1.1.410",
    "ruff",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
include = ["src"]
exclude = [
    "**/.*",
    "**/node_modules",
    "**/__pycache__",
    ".venv",
    "venv",
]
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnknownMemberType = "none"
useLibraryCodeForTypes = true
reportConstantRedefinition = false
ignore = [
]

[tool.ruff]
line-length = 79
extend-exclude = [
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.format]
quote-style = "single"
